--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 
     <div class="calculator">
+        <h1> \\ Texas
+            Numbers Massacre</h1>
         <div class="calculatorBody">
             <div id="resultContainer">
                 <div id="result">0</div>
@@ -50,10 +52,8 @@
         <p>&copy; 2022 by Adam Riese</p>
         <p>Created with Love <a href="https://www.youtube.com/watch?v=Bbiqy2TOwBw" target="_blank"><i
                     class="fa-solid fa-heart"></i></a></p>
-        </p>
-        <p><i class="fa-solid fa-carrot"></i> 1oo% vegan</p>
+        <p><i class="fa-solid fa-carrot"></i></i>1oo% vegan</p>
     </footer>
-
 
     <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
 
