--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 
 <body>
-
     <div class="calculator">
-        <h1> \\ Texas
-            Numbers Massacre</h1>
+        <h1> \\ Texas Numbers Massacre</h1>
         <div class="calculatorBody">
             <div id="resultContainer">
                 <div id="result">0</div>
