--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="calculator">
-        <h1> \\ Texas Numbers Massacre</h1>
+        <h1><i class="fa-solid fa-abacus"></i> \\ Texas Numbers Massacre</h1>
         <div class="calculatorBody">
             <div id="resultContainer">
                 <div id="result">0</div>
